--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -44,8 +44,9 @@ avg_losses_max = 900_000_000
 conditioned_gmf_gb = 8
 
 # parallel tiling parameters, by default pmap_max_gb=num_cores/8
+# notice that there are 2 pmaps per core defined at the same time
 pmap_max_gb =
-pmap_max_mb = 1500
+pmap_max_mb = 750
 
 # limit when computing hazard curves from GMFs
 gmf_data_rows = 40_000_000
