Filtering out gmf_data records with low intensity secondary perils

--- a/openquake/qa_tests_data/scenario_damage/case_22/job_h.ini
+++ b/openquake/qa_tests_data/scenario_damage/case_22/job_h.ini
@@ -21,3 +21,4 @@ truncation_level = 3.0
 maximum_distance = 300
 gsim = ChiouYoungs2008 
 number_of_ground_motion_fields = 10
+minimum_intensity = {'LiqProb': .02, 'LSE': .001}
