--- a/demos/risk/EventBasedRisk/job_eb.ini
+++ b/demos/risk/EventBasedRisk/job_eb.ini
@@ -1,6 +1,7 @@
 [general]
 description = Stochastic Event-Based Demo (Nepal)
-calculation_mode = ebrisk
+calculation_mode = event_based_risk
+ground_motion_fields = false
 aggregate_by = NAME_1, taxonomy
 ses_seed = 42
 
