--- a/openquake/qa_tests_data/event_based/case_1/job.ini
+++ b/openquake/qa_tests_data/event_based/case_1/job.ini
@@ -2,6 +2,7 @@
 
 description = Event Based QA Test, Case 1
 calculation_mode = event_based
+rupture_model_file = ruptures.hdf5|job_ruptures.ini
 ses_seed = 1066
 
 [geometry]
@@ -13,21 +14,9 @@ sites = 0.0 0.0
 # end branch enumeration
 number_of_logic_tree_samples = 0
 
-[erf]
-
-width_of_mfd_bin = 1.0
-
-[site_params]
-
-reference_vs30_type = measured
-reference_vs30_value = 800.0
-reference_depth_to_2pt5km_per_sec = 2.5
-reference_depth_to_1pt0km_per_sec = 50.0
 
 [calculation]
 
-source_model_logic_tree_file = source_model_logic_tree.xml
-gsim_logic_tree_file = gsim_logic_tree.xml
 # years
 investigation_time = 1.0
 intensity_measure_types_and_levels = {"PGA": [0.1, 0.4, 0.6]}
@@ -41,8 +30,6 @@ minimum_intensity = .1
 [event_based_params]
 
 ses_per_logic_tree_path = 80000
-ground_motion_correlation_model =
-ground_motion_correlation_params =
 
 [output]
 
