Replacing  `ruptures_hdf5` with `hazard_calculation_id`

--- a/openquake/qa_tests_data/event_based_risk/case_master/job_risk.ini
+++ b/openquake/qa_tests_data/event_based_risk/case_master/job_risk.ini
@@ -2,7 +2,7 @@
 description = event based risk from SES
 calculation_mode = event_based_risk
 ground_motion_fields = false
-rupture_model_file = job_ses.ini
+hazard_calculation_id = job_ses.ini
 number_of_logic_tree_samples = 200
 
 [exposure]
