--- a/openquake/qa_tests_data/event_based/case_1/job_from_ses.ini
+++ b/openquake/qa_tests_data/event_based/case_1/job_from_ses.ini
@@ -2,7 +2,7 @@
 
 description = Event Based From SES
 calculation_mode = event_based
-rupture_model_file = job_ses.ini
+hazard_calculation_id = job_ses.ini
 ses_seed = 1066
 
 [geometry]
