Extended hazard_calculation_id to a pathname

--- a/openquake/qa_tests_data/mosaic_for_ses/job.ini
+++ b/openquake/qa_tests_data/mosaic_for_ses/job.ini
@@ -17,7 +17,7 @@ investigation_time = 1.0
 
 [calculation]
 
-rupture_model_file = rups.hdf5
+#rupture_model_file = rups.hdf5
 intensity_measure_types = PGA
 truncation_level = 3
 maximum_distance = 200.0
