--- a/docker/Dockerfile.engine
+++ b/docker/Dockerfile.engine
@@ -16,7 +16,7 @@ FROM python:3.12.11-slim AS compile-image
 LABEL maintainer="GEM Foundation <devops@openquake.org>" \
        vendor="GEM Foundation"
 RUN useradd -m -u 1000 -s /bin/bash openquake
-RUN apt-get update &&  apt-get install -y --no-install-recommends build-essential gcc git libcap-dev
+RUN apt-get update &&  apt-get install -y --no-install-recommends build-essential gcc git libcap-dev libexpat1
 ARG oq_branch
 # Create venv
 ENV VIRTUAL_ENV=/opt/openquake
