--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -60,4 +60,5 @@ jobs:
           curl --fail -L -I -X GET http://127.0.0.1:8800
           # Run a calcs using https
           oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
+          oq engine --run "https://github.com/gem/oq-engine/blob/master/openquake/server/tests/data/classical.zip?raw=true"
           curl -v --fail -G http://127.0.0.1:8800/engine/1/outputs
