--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -12,7 +12,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
-FROM python:3.12.6-slim AS compile-image
+FROM python:3.12.6 AS compile-image
 LABEL maintainer="GEM Foundation <devops@openquake.org>" \
        vendor="GEM Foundation"
 RUN apt-get update &&  \
@@ -22,16 +22,16 @@ ARG oq_branch
 ENV LANG en_US.UTF-8
 WORKDIR /usr/src
 # Create venv
-ENV VIRTUAL_ENV=/opt/openquake
+ENV VIRTUAL_ENV /opt/openquake
 RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ENV PATH "$VIRTUAL_ENV/bin:$PATH"
 # Install dependencies and engine
 RUN git clone https://github.com/gem/oq-engine.git --depth=1 --branch $oq_branch && chown -R openquake:openquake oq-engine && \
     cd oq-engine && pip --disable-pip-version-check install -e . -r requirements-py312-linux64.txt --no-warn-script-location
 #
 USER openquake
 ENV HOME /home/openquake
-ENV LOCKDOWN=False
+ENV LOCKDOWN False
 #
 #ENV OQ_CONFIG_FILE /opt/openquake/openquake.cfg
 #ADD openquake.cfg /opt/openquake/openquake.cfg
