--- a/docker/Dockerfile.engine
+++ b/docker/Dockerfile.engine
@@ -26,7 +26,7 @@ ENV PATH "$VIRTUAL_ENV/bin:$PATH"
 RUN git clone https://github.com/gem/oq-engine.git --depth=1 --branch $oq_branch && cd oq-engine && \
     pip --disable-pip-version-check install . -r requirements-py312-linux64.txt --no-warn-script-location
 #
-FROM python:3.12.11-slim AS build-image
+FROM python:3.12.6 AS build-image
 COPY --from=compile-image /opt/openquake/ /opt/openquake/
 ENV LANG en_US.UTF-8
 ENV LOCKDOWN False
