--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -19,21 +19,21 @@ RUN apt-get update &&  \
     apt-get install -y --no-install-recommends build-essential gcc git libcap-dev ssh dnsutils telnet netbase net-tools lsof tcpdump sudo strace time libexpat1 && \
     useradd -m -u 1000 -G sudo -s /bin/bash openquake && echo "openquake ALL=(ALL) NOPASSWD:ALL" | sudo tee -a /etc/sudoers
 ARG oq_branch
-ENV LANG en_US.UTF-8
+ENV LANG=en_US.UTF-8
 WORKDIR /usr/src
 # Create venv
-ENV VIRTUAL_ENV /opt/openquake
+ENV VIRTUAL_ENV=/opt/openquake
 RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH "$VIRTUAL_ENV/bin:$PATH"
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 # Install dependencies and engine
 RUN git clone https://github.com/gem/oq-engine.git --depth=1 --branch $oq_branch && chown -R openquake:openquake oq-engine && \
     cd oq-engine && pip --disable-pip-version-check install -e . -r requirements-py312-linux64.txt --no-warn-script-location
 #
 USER openquake
-ENV HOME /home/openquake
-ENV LOCKDOWN False
+ENV HOME=/home/openquake
+ENV LOCKDOWN=False
 #
-#ENV OQ_CONFIG_FILE /opt/openquake/openquake.cfg
+#ENV OQ_CONFIG_FILE=/opt/openquake/openquake.cfg
 #ADD openquake.cfg /opt/openquake/openquake.cfg
 #
 WORKDIR ${HOME}
