Force use of utf8 encoding when writing non-binary files.  Update AreaSource demo to use UTF8 chars that are obviously not ASCII.  Use utf-8-sig when reading so as to handle BOM

--- a/demos/hazard/AreaSourceClassicalPSHA/job.ini
+++ b/demos/hazard/AreaSourceClassicalPSHA/job.ini
@@ -1,6 +1,6 @@
 [general]
 
-description = Classical PSHA — Area Source
+description = Classical PSHA Area Source demo for Nepal नेपाल
 calculation_mode = classical
 
 [geometry]
