Removed max_gmvs_chunk

--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -51,8 +51,7 @@ pmap_max_mb = 750
 # limit when computing hazard curves from GMFs
 gmf_data_rows = 40_000_000
 
-# used in event_based_risk, India has 2M sites
-max_gmvs_chunk = 1_000_000
+# used in event_based_risk
 max_assets_chunk = 5_000
 
 # used in AssetCollection.get_aggkeys
