--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -58,6 +58,8 @@ jobs:
           sleep 1
           # Perform migration after setup local_settings
           curl --fail -L -I -X GET http://127.0.0.1:8800
+          cd $HOME/gh-venv/
+          oq engine --run  demos/hazard/ScenarioLiquefaction/job.ini
           # Run a calcs using https
           oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
           curl -v --fail -G http://127.0.0.1:8800/engine/1/outputs
