Moved incorrect Nepal and UTF8 location description from AreaSource demo to ScenarioDamage

--- a/demos/hazard/AreaSourceClassicalPSHA/job.ini
+++ b/demos/hazard/AreaSourceClassicalPSHA/job.ini
@@ -1,6 +1,6 @@
 [general]
 
-description = Classical PSHA Area Source demo for Nepal नेपाल
+description = Classical PSHA Area Source demo for Null Island
 calculation_mode = classical
 
 [geometry]
