--- a/demos/risk/ScenarioDamage/job_hazard.ini
+++ b/demos/risk/ScenarioDamage/job_hazard.ini
@@ -1,5 +1,5 @@
 [general]
-description = Scenario Hazard Demo (Nepal)
+description = Scenario Hazard Demo (Nepal नेपाल)
 calculation_mode = scenario
 ses_seed = 42
 
