--- a/demos/risk/ScenarioDamage/job_risk.ini
+++ b/demos/risk/ScenarioDamage/job_risk.ini
@@ -1,5 +1,5 @@
 [general]
-description = Scenario Damage and Consequences Demo (Nepal)
+description = Scenario Damage and Consequences Demo (Nepal नेपाल)
 calculation_mode = scenario_damage
 
 [boundaries]
