Added docstring [ci skip]

--- a/openquake/engine/openquake.cfg
+++ b/openquake/engine/openquake.cfg
@@ -51,7 +51,7 @@ pmap_max_mb = 750
 # limit when computing hazard curves from GMFs
 gmf_data_rows = 40_000_000
 
-# this has impact on ebrisk memory occupation
+# this has little impact on ebrisk memory occupation
 max_ruptures_chunk = 1000
 
 # this has impact on event_based_risk memory occupation
