--- a/.github/workflows/release-to-pypi.yaml
+++ b/.github/workflows/release-to-pypi.yaml
@@ -27,6 +27,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup debugging session
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 35
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
     - name: Clone Repository (Latest)
       uses: actions/checkout@v4
       if: github.event.inputs.git-ref == ''
@@ -39,6 +43,15 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "3.12"
+    # Append a devXY (where XY is the Jenkins build ID if destination is the testing repo
+    # to make testing possible even if a same release version (i.e. 2.2.0)is already
+    # on the test repo. Whe use devXY to be compliant with PEP440 (i.e. no git has allowed)
+    - name: Append a devXY if the testing repo
+      env:
+        BUILD_NUMBER: ${{github.run_number}}
+      run: |
+        sed -i "s/version = get_version()/version = get_version() + 'dev${BUILD_NUMBER}'/g" setup.py
+    if: github.event.inputs.pypi-test == '1'
     - name: Install pypa/build
       run: |
         python3 -m pip install build --user
