add .dev instead of dev /pep-0440/#summary-of-permitted-suffixes-and-relative-ordering

--- a/.github/workflows/release-to-pypi.yaml
+++ b/.github/workflows/release-to-pypi.yaml
@@ -50,7 +50,7 @@ jobs:
       env:
         BUILD_NUMBER: ${{ github.run_number }}
       run: |
-        sed -i "s/version = get_version()/version = get_version() + 'dev${BUILD_NUMBER}'/g" setup.py
+        sed -i "s/version = get_version()/version = get_version() + '.dev${BUILD_NUMBER}'/g" setup.py
       if: github.event.inputs.pypi-test == '1'
     - name: Install pypa/build
       run: |
