add scripts command to Dockerfile to use DJANGO SETTINGS

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -38,7 +38,9 @@ ENV LOCKDOWN=False
 #
 WORKDIR ${HOME}
 RUN mkdir oqdata
+ADD scripts/oq-start.sh ${HOME}
 #
 EXPOSE 8800:8800
 STOPSIGNAL SIGINT
 ENTRYPOINT ["/bin/bash", "-c"]
+CMD ["./oq-start.sh"] 
