--- a/docker/Dockerfile.engine
+++ b/docker/Dockerfile.engine
@@ -28,11 +28,11 @@ RUN git clone https://github.com/gem/oq-engine.git --depth=1 --branch $oq_branch
 #
 FROM python:3.12.6-slim AS build-image
 COPY --from=compile-image /opt/openquake/ /opt/openquake/
-ENV LANG en_US.UTF-8
+ENV LANG=en_US.UTF-8
 ENV LOCKDOWN=False
 RUN useradd -m -u 1000 -s /bin/bash openquake
 USER openquake
-ENV HOME /home/openquake
+ENV HOME=/home/openquake
 WORKDIR ${HOME}
 ENV PATH="/opt/openquake/bin:$PATH"
 #
