--- a/openquake/qa_tests_data/disagg/case_15/job_50yr.ini
+++ b/openquake/qa_tests_data/disagg/case_15/job_50yr.ini
@@ -10,6 +10,7 @@ pointsource_distance = 100
 [geometry]
 
 sites = 67.2 44.8
+siteid = ASCE
 site_model_file = sites_cea_res6.csv
 override_vs30 = 760.
 
