--- a/openquake/qa_tests_data/postproc/case_rtgm/job_vs30.ini
+++ b/openquake/qa_tests_data/postproc/case_rtgm/job_vs30.ini
@@ -9,6 +9,7 @@ pointsource_distance = 100
 [geometry]
 
 sites = 24.1506 35.5364
+siteid = CRETE
 site_model_file = sites_eur_res6_rock.csv
 override_vs30 = 760 1080
 
