--- a/openquake/qa_tests_data/mosaic_for_ses/ses.toml
+++ b/openquake/qa_tests_data/mosaic_for_ses/ses.toml
@@ -1,11 +1,13 @@
 [global]
 calculation_mode = "event_based"
 ground_motion_fields = false
-number_of_logic_tree_samples = 2000
+number_of_logic_tree_samples = 200
+ses_per_logic_tree_path = 50
+minimum_magnitude = 5
 
 [atexit]
 func = "openquake.engine.postjobs.build_ses"
-out = 'ses.hdf5'
+out_file = "rups.hdf5"
 
 [EUR]
 ini = "EUR/in/job_vs30.ini"
