Added test for the GHM

--- a/openquake/qa_tests_data/event_based_risk/case_4a/job_risk.ini
+++ b/openquake/qa_tests_data/event_based_risk/case_4a/job_risk.ini
@@ -6,6 +6,9 @@ master_seed = 42
 [boundaries]
 region = -122.6 38.3, -121.5 38.3, -121.5 37.1, -122.6 37.1
 
+[exposure]
+exposure_file = exposure_model.xml
+
 [vulnerability]
 structural_vulnerability_file = structural_vulnerability_model.xml
 
