--- a/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
+++ b/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
@@ -1,17 +1,21 @@
-[ghm.global]
+[hazard.global]
 description = "hazard"
 
-[ghm.atexit]
+[hazard.atexit]
 func = "openquake.engine.postjobs.build_ses"
 out_file = "ses.hdf5"
 
-[ghm.Hazard]
+[hazard.Job]
 ini = "job_hazard.ini"
+mosaic_model = "USA"
 ground_motion_fields = false
+number_of_logic_tree_samples = 10
 
-[grm.global]
+#######################################
+
+[risk.global]
 description = "risk"
 
-[grm.Risk]
+[risk.Job]
 ini = "job_risk.ini"
 hazard_calculation_id = "ses.hdf5"
