--- a/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
+++ b/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
@@ -1,9 +1,5 @@
-[hazard.global]
-description = "hazard"
-
-[hazard.success]
-func = "openquake.engine.postjobs.build_ses"
-out_file = "ses.hdf5"
+[global.global]
+description = "hazard+risk"
 
 [hazard.Job]
 ini = "job_hazard.ini"
@@ -11,10 +7,9 @@ mosaic_model = "USA"
 ground_motion_fields = false
 number_of_logic_tree_samples = 10
 
-#######################################
-
-[risk.global]
-description = "risk"
+[hazard.success]
+func = "openquake.engine.postjobs.build_ses"
+out_file = "ses.hdf5"
 
 [risk.Job]
 ini = "job_risk.ini"
