Added Workflow class

--- a/openquake/qa_tests_data/mosaic_for_ses/ses.toml
+++ b/openquake/qa_tests_data/mosaic_for_ses/ses.toml
@@ -1,4 +1,5 @@
-[global]
+[workflow]
+description = "building a SES"
 calculation_mode = "event_based"
 ground_motion_fields = false
 number_of_logic_tree_samples = 200
