--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,8 @@ include openquake/server/local_settings.py.server
 # OpenQuake server data
 recursive-include openquake/server/db *.sql
 recursive-include openquake/server *.html *.css *.png *.js *.map *.ttf
+# Liquefation data
+include openquake/sep/liquefaction/data/todorovic_silva_2022/todorovic_silva_2022.onnx.gz
 # HMTK data
 include openquake/hmtk/seismicity/occurrence/README.md
 include openquake/hmtk/strain/regionalisation/kreemer_polygons_area.txt
