Implemented import_risk

--- a/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
+++ b/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
@@ -14,3 +14,6 @@ out_file = "ses.hdf5"
 [risk.Job]
 ini = "job_risk.ini"
 hazard_calculation_id = "ses.hdf5"
+
+[risk.success]
+func = "openquake.engine.postjobs.import_risk"
