include openquake/server/templates/registration/*.default.tmpl in MANIFEST.in; actualize email templates in docker/scripts/oq-start.sh

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include openquake/engine/openquake.cfg
 # OpenQuake server config examples
 include openquake/server/local_settings.py.pam
 include openquake/server/local_settings.py.server
+include openquake/server/templates/registration/*.default.tmpl
 # OpenQuake server data
 recursive-include openquake/server/db *.sql
 recursive-include openquake/server *.html *.css *.png *.js *.map *.ttf
