--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,8 @@ include openquake/engine/openquake.cfg
 # OpenQuake server config examples
 include openquake/server/local_settings.py.pam
 include openquake/server/local_settings.py.server
-include openquake/server/templates/registration/*.default.tmpl
+# OpenQuake server email notification templates
+include openquake/server/templates/registration *.default.tmpl
 # OpenQuake server data
 recursive-include openquake/server/db *.sql
 recursive-include openquake/server *.html *.css *.png *.js *.map *.ttf
