--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,7 +7,7 @@ include openquake/engine/openquake.cfg
 include openquake/server/local_settings.py.pam
 include openquake/server/local_settings.py.server
 # OpenQuake server email notification templates
-include openquake/server/templates/registration *.default.tmpl
+recursive-include openquake/server/templates/registration *.default.tmpl
 # OpenQuake server data
 recursive-include openquake/server/db *.sql
 recursive-include openquake/server *.html *.css *.png *.js *.map *.ttf
