--- a/docker/Dockerfile.engine
+++ b/docker/Dockerfile.engine
@@ -31,6 +31,7 @@ COPY --from=compile-image /opt/openquake/ /opt/openquake/
 ENV LANG=en_US.UTF-8
 ENV LOCKDOWN=False
 RUN useradd -m -u 1000 -s /bin/bash openquake
+RUN chown -R openquake:openquake /opt/openquake
 USER openquake
 ENV HOME=/home/openquake
 WORKDIR ${HOME}
