--- a/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
+++ b/openquake/qa_tests_data/event_based_risk/case_4a/jobs.toml
@@ -16,4 +16,5 @@ ini = "job_risk.ini"
 hazard_calculation_id = "ses.hdf5"
 
 [risk.success]
-func = "openquake.engine.postjobs.import_risk"
+func = "openquake.engine.postjobs.import_outputs"
+out_types = ["aggexp_tags", "aggrisk", "avg_losses_by", "aggcurves"]
