--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -56,6 +56,7 @@ jobs:
           EMAIL_HOST_USER=admin@reply.com
           EMAIL_HOST_PASSWORD=polhjuih@
           EMAIL_SUPPORT=noreply@reply.com
+          DJANGO_SETTINGS_MODULE=openquake.server.settings
           EOF
           echo " docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly "
           docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly
@@ -97,6 +98,7 @@ jobs:
           EMAIL_HOST_USER=admin@reply.com
           EMAIL_HOST_PASSWORD=polhjuih@
           EMAIL_SUPPORT=noreply@reply.com
+          DJANGO_SETTINGS_MODULE=openquake.server.settings
           EOF
           echo " docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly "
           docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly
