--- a/.github/workflows/engine_weekly_test.yml
+++ b/.github/workflows/engine_weekly_test.yml
@@ -87,7 +87,7 @@ jobs:
           cd /home/runner/work/oq-engine/oq-engine
           cd openquake/server
           cat > local_settings.py << EOF
-          LOCKDOWN = True
+          OQ_APPLICATION_MODE = RESTRICTED
           WEBUI_USER = 'runner'
           WEBUI_ACCESS_LOG_DIR = '/var/log/oq-engine'
           DEBUG = True
