set correct PWD on gh venv

--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install OQ (Master)
+      - name: Install OQ (${{ matrix.engine-branch }})
         run: |
           set -x
           curl -L -O https://github.com/gem/oq-engine/raw/master/install.py
