--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -62,7 +62,7 @@ jobs:
           # Perform migration after setup local_settings
           curl --fail -L -I -X GET http://127.0.0.1:8800
           # Run all demos          
-          cd $HOME/gh-venv/
+          cd $HOME/gh-venv-${{ matrix.engine-branch }}/
           curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/master/bin/run-demos.sh
           bash ./run-demos.sh demos
           # Run a calcs using https
