--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -42,6 +42,9 @@ jobs:
         run: |
           docker build --build-arg oq_branch=master -t openquake/engine:nightly -f docker/Dockerfile.dev docker
           docker image ls
+          echo " push image engine with tag nightly on docker hub "
+          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+          docker push openquake/engine:nightly
           # Test authentication
           echo "Test WEBUI HEADLESS"
           cat > ./.env << EOF
