--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -42,9 +42,6 @@ jobs:
         run: |
           docker build --build-arg oq_branch=master -t openquake/engine:nightly -f docker/Dockerfile.dev docker
           docker image ls
-          echo " push image engine with tag nightly on docker hub "
-          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-          docker push openquake/engine:nightly
           # Test authentication
           echo "Test WEBUI HEADLESS"
           cat > ./.env << EOF
@@ -88,6 +85,9 @@ jobs:
         run: |
           docker build --build-arg oq_branch=$REPO_REF -t openquake/engine:$DOCKER_TAG -f docker/Dockerfile.dev docker
           docker image ls
+          echo " push image engine with tag nightly on docker hub "
+          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+          docker push openquake/engine:$DOCKER_TAG
           # Test authentication
           echo "Test WEBUI HEADLESS"
           cat > ./.env << EOF
@@ -104,10 +104,11 @@ jobs:
           EMAIL_SUPPORT=noreply@reply.com
           DJANGO_SETTINGS_MODULE=openquake.server.settings
           EOF
-          echo " docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly "
-          docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly
+          echo " docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:$DOCKER_TAG "
+          docker run --name openquake --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:$DOCKER_TAG
           echo "Waiting WEBUI up on port 8800...."
           while ! nc -z 127.0.0.1 8800; do
+           echo "Still waiting WEBUI up on port 8800...."
            sleep 5 # wait for 5 seconds before check again
           done
           sleep 1
