--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,7 +13,9 @@ recursive-include openquake/server *.html *.css *.png *.js *.map *.ttf
 include openquake/hmtk/seismicity/occurrence/README.md
 include openquake/hmtk/strain/regionalisation/kreemer_polygons_area.txt
 # Hazardlib data
-recursive-include openquake/hazardlib/gsim *.csv *.hdf5
+recursive-include openquake/hazardlib/gsim *.csv *.hdf5 *.onnx
+# Secondary perils data
+recursive-include openquake/sep *.onnx.gz
 # NRML sample data
 recursive-include openquake/commonlib/nrml_examples *.xml *.csv *.geojson
 # QA tests data
