--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os: [ubuntu-24.04]
         python-version: ["3.11", "3.12"]
-        engine-branch: ["master", "engine-3.23", "engine-3.24"]
+        engine-branch: ["master", "engine-3.23", "engine-3.24", "3.23"]
     steps:
       - name: Set up Python  ${{ matrix.python-version }}
         uses: actions/setup-python@v5
