--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -64,7 +64,9 @@ jobs:
           # Run all demos          
           cd $HOME/gh-venv-${{ matrix.engine-branch }}/
           curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/master/bin/run-demos.sh
-          bash ./run-demos.sh demos
+          oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
+          qa_tests_data_dir=$oq_basedir/openquake/qa_tests_data
+          bash ./run-demos.sh demos ${qa_tests_data_dir}
           # Run a calcs using https
           oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
           curl -v --fail -G http://127.0.0.1:8800/engine/1/outputs
@@ -88,7 +90,9 @@ jobs:
           # Run all demos          
           cd $HOME/gh-venv/
           curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/master/bin/run-demos.sh
-          bash ./run-demos.sh demos
+          oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
+          qa_tests_data_dir=$oq_basedir/openquake/qa_tests_data
+          bash ./run-demos.sh demos ${qa_tests_data_dir}
           # Run a calcs using https
           oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
           curl -v --fail -G http://127.0.0.1:8800/engine/1/outputs
