--- a/.github/workflows/macos_m1_install.yml
+++ b/.github/workflows/macos_m1_install.yml
@@ -127,7 +127,7 @@ jobs:
           oq info venv
           oq info cfg
           cd /Users/runner/runner-isolation/actions-runner/_work/oq-engine/oq-engine
-          bin/run-demos.sh demos
+          bin/run-demos.sh demos/ openquake/qa_tests_data/
       - name: Run tests for calculators to test installation
         if: always()
         run: |
