--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -41,5 +41,6 @@ ADD scripts/oq-start.sh ${HOME}
 #
 EXPOSE 8800
 STOPSIGNAL SIGINT
-ENTRYPOINT ["/bin/bash", "-c"]
-CMD ["./oq-start.sh"]
+#ENTRYPOINT ["/bin/bash", "-c"]
+#CMD ["./oq-start.sh"]
+ENTRYPOINT ["./oq-start.sh"]
