Download run-demos.sh from the current branch

--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -63,7 +63,7 @@ jobs:
           curl --fail -L -I -X GET http://127.0.0.1:8800
           # Run all demos          
           cd $HOME/gh-venv-${{ matrix.engine-branch }}/
-          curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/master/bin/run-demos.sh
+          curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/${{ matrix.engine-branch }}/bin/run-demos.sh
           oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
           qa_tests_data_dir=$oq_basedir/openquake/qa_tests_data
           bash ./run-demos.sh demos ${qa_tests_data_dir}
@@ -89,7 +89,7 @@ jobs:
           curl --fail -L -I -X GET http://127.0.0.1:8800
           # Run all demos          
           cd $HOME/gh-venv_custom/
-          curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/master/bin/run-demos.sh
+          curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/${{ github.event.inputs.git-ref }}/bin/run-demos.sh
           oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
           qa_tests_data_dir=$oq_basedir/openquake/qa_tests_data
           bash ./run-demos.sh demos ${qa_tests_data_dir}
